Fix: fix horizontal scroll bug

--- a/src/global/styles/global.css
+++ b/src/global/styles/global.css
@@ -13,12 +13,11 @@ body {
 	font-family: "Inter", sans-serif;
 	line-height: 1.625;
 	background-color: var(--clr-body-bg);
-	width: 100vw;
+	max-width: 100vw;
 	overflow-x: hidden;
 }
 
 #root {
-	outline: 1px solid pink;
 	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
